--- a/css/style.css
+++ b/css/style.css
@@ -174,7 +174,7 @@ p.ultra {
 }
 
 a {
-    color: #666;
+    color: #fff;
     -webkit-transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
